Update lib to esnext

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,9 @@
     "target": "ES5",
     "module": "CommonJS",
     "moduleResolution": "node",
+    "lib": [
+      "ESNext"
+    ],
     "esModuleInterop": true,
     "declaration": true,
     "declarationMap": true,
