--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "CommonJS",
     "moduleResolution": "node",
     "lib": [
+      "DOM",
       "ESNext"
     ],
     "esModuleInterop": true,
