--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "DOM",
       "ESNext"
     ],
+    "downlevelIteration": true,
     "esModuleInterop": true,
     "declaration": true,
     "declarationMap": true,
