--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "color-system",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
@@ -20,6 +20,7 @@
   },
   "files": [
     "dist",
+    "css",
     "scss"
   ]
 }
